# flet_webview_windows

./: README.md  pyproject.toml
examples/flet_webview_windows_example/: pyproject.toml
examples/flet_webview_windows_example/src/: main.py
src/flet_webview_windows/: __init__.py
src/flet_webview_windows.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/flutter/flet_webview_windows/: README.md
src/flutter/flet_webview_windows/lib/src/: flet_webview_windows.dart
