[project]
name = "flet-webview-windows"
version = "0.1.0"
description = "FletWebviewWindows control for Flet"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Flet contributors", email = "you@example.com" }
]
dependencies = [
    "flet>=0.27.6",
]

[project.urls]
Homepage = "https://mydomain.dev"
Documentation = "https://github.com/MyGithubAccount/flet-webview-windows"
Repository = "https://github.com/MyGithubAccount/flet-webview-windows"
Issues = "https://github.com/MyGithubAccount/flet-webview-windows/issues"

[tool.setuptools.package-data]
"flutter.flet_webview_windows" = ["**/*"]

[tool.uv]
dev-dependencies = [
    "flet[all]==0.27.6",
]

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.27.6"}

[tool.setuptools]
license-files = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
